fix: row gap for input boxes

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 
 .input-boxes {
     margin-bottom: 48px;
+    row-gap: 36px;
 }
 
 .invalid-feedback {
